fix buttons align

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -13,6 +13,8 @@ button, .button, .button-outlined {
     font-size: 1.2rem;
     padding: 8px 12px;
     margin-right: 4px;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 button, .button, .button-outlined, .icon-button {
